# robotics-final

./: .gitignore  README.md  requirements.txt
src/exam_localization/: package.xml  setup.cfg  setup.py
src/exam_localization/config/: nav2_params.yaml
src/exam_localization/launch/: localization.launch.py
src/exam_localization/maps/: depot.yaml
src/exam_path_planning/: package.xml  setup.cfg  setup.py
src/exam_path_planning/exam_path_planning/: astar_planner.py
src/exam_rl/: package.xml  setup.cfg  setup.py
src/exam_rl/exam_rl/: ddpg.py  rl_line_follower.py
src/robotic_course/: README.md
src/robotic_course/robot_description/: CMakeLists.txt  package.xml
src/robotic_course/robot_description/config/: gz_bridge.yaml  rtabmap_slam.yaml
src/robotic_course/robot_description/launch/: display.launch.py  gazebo.launch.py
src/robotic_course/robot_description/rviz/: config.rviz
src/robotic_course/robot_description/scripts/: ekf_diff_imu.cpp  frame_id_converter.cpp  gym_gazebo_env.py  motor_command.cpp  test_env.py
src/robotic_course/robot_description/src/description/: robot.urdf
